8371159: [Leyden] assert(false) failed: Attempting to acquire lock